# PII_masking

./: .env.example  .gitignore  Exercice.md  README.md  presentation.tex  pyproject.toml  test_bert_visualization.py
experiments/bert_token_classification/: bert_finetuning.py  bert_finetuning_kaggle.ipynb  dataset_processing.py  debug_eval.py  eval.py  reduce_dataset_cell.py
experiments/few_shot_learning/: mistral_prompting_baseline.py
experiments/llm_fine_tuning/: dataset_processing.py  eval.py  fine_tuning.py
experiments/llm_token_classification/: dataset_processing_token.py  eval.py  mistral-token-classif.ipynb
experiments/old_token_classification/: KAGGLE_GUIDE.md  README_CONTEXT.md  dataset_check.py  dataset_processing.py  eval.py  fast_dataset.py  finetune_mistral_self.py  kaggle_finetuning.py
experiments/performance_benchmarks/: concurrency_benchmark.py  services_setup.py  speed_benchmark.py
experiments/visualization/: results_visualization.py
space/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
space/services/: __init__.py  base_service.py  bert_classif.py  mistral_prompting.py  ocr_service.py
space/src/pii_masking/: __init__.py  base_model.py  custom_evaluator.py  data_loader.py  text_processing.py
space/static/: index.html
src/pii_masking/: base_model.py  text_processing.py
